--- a/template/src/oj_base.html
+++ b/template/src/oj_base.html
@@ -55,7 +55,9 @@
                 <li><a href="/contests/">比赛</a></li>
                 <li><a href="/groups/">小组</a></li>
                 <li><a href="/rank/">排名</a></li>
+                <li><a href="/forum/">论坛</a></li>
                 <li><a href="/help/">帮助</a></li>
+
             </ul>
             {% if request.user.is_authenticated %}
                 <ul class="nav navbar-nav navbar-right">
